style: upadated scoreboard

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="header">Tic Tac Toe</div>
     <div class="content">
-        <div class="playerScore">Player</div>
+        <div class="playerScoreBoard">
+            <div class="playerScore">Player</div>
+        </div>
         <div class="gameBoard">
             <div class="row1 column1 card"></div>
             <div class="row2 column2 card"></div>
@@ -22,7 +24,9 @@
             <div class="row9 column9 card"></div>
             <button id="reset">Reset Score</button>
         </div>
-        <div class="computerScore">Computer</div>
+        <div class="computerScoreBoard">
+            <div class="computerScore">Computer</div>
+        </div>
     </div>
     
 </body>
